--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Vue Mastery</title>
+    <title>Product Detail app</title>
     <!-- Import Styles -->
     <link rel="stylesheet" href="css/styles.css" />
     <!-- Import Vue.js -->
