--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Product Details app</title>
+    <title>Product Detail app</title>
     <!-- Import Styles -->
     <link rel="stylesheet" href="css/styles.css" />
     <!-- Import Vue.js -->
@@ -34,6 +34,7 @@
     <script src="./components/productDisplay.js"></script>
     <script src="./components/reviewForm.js"></script>
     <script src="./components/reviewTab.js"></script>
+    <script src="./components/cartList.js"></script>
     <!-- mount app -->
 
     <script>
